--- a/src/app/list-creation/list-creation.page.html
+++ b/src/app/list-creation/list-creation.page.html
@@ -13,7 +13,7 @@
              
 
               <ion-col size="1"  style="text-align: left;margin-top: 10px;margin-right: 7px;"   > 
-              <ion-icon name="list-circle-outline" style="font-size:large;zoom:1;" (click)="login()"></ion-icon>        
+              <ion-icon name="list-circle-outline" style="font-size:large;zoom:1;" (click)="lishshows()"></ion-icon>        
               </ion-col>
                       
                       
