--- a/src/app/list-shows/list-shows.page.html
+++ b/src/app/list-shows/list-shows.page.html
@@ -34,22 +34,18 @@
           <div style="height: 7px"></div>  
 
           <ion-slides >  
-            <ion-slide class="trending" *ngFor="let names of trendingcourses" (click)="trendtap(names)" >
-            <ion-card class="trend-card">
-              <!-- <img src = {{names.avatarimage}} style="height: 70px;"  /> -->
-
-              <img src = {{names.avatarimage}} style="width: 100%;" > 
-
-              <div style="padding-left:5px">
-                <h2 style="font-size: smaller;color:rgb(175, 171, 171);text-align:left;"> {{ names.prodname }}</h2>
-                <div class="card-subtitle" style="font-size: smaller;color: rgb(175, 171, 171);text-align:left;"><b>{{ names.proddesc }}</b></div>
+            <ion-slide class="trending" *ngFor="let names of daBuilding" (click)="trendtap(names)" >
+            <ion-card class="trend-card">            
+              <div style="padding-left:5px;margin-bottom:20px;margin-right:20px">
+                <h2 style="font-size: smaller;color:white;text-align:left;"> {{ names.prodname }}</h2>
+                <div class="card-subtitle" style="font-size: smaller;color: white;text-align:left;"><b>{{ names.proddesc }}</b></div>
                 <br>
                 <div style="text-align: left;color: lime;">Payment Options: </div>
                 
                 <div class="card-subtitle" style="margin-top: 1px;font-size: smaller;color: rgb(175, 171, 171);text-align:left;">
-                  <b>{{ names.cost }}</b> <br>
-                  <b>{{ names.costt }}</b> <br>
-                  <b>{{ names.costf }}</b> <br>  
+                  <b>{{ names.proddesc }}</b> <br>
+                  <b>{{ names.proddesc }}</b> <br>
+                  <b>{{ names.proddesc }}</b> <br>  
                   <!-- <span style="font-size: smaller;color:yellow;text-align:left;"> {{ names.duration }}</span>                 -->
                 </div>
  
@@ -58,5 +54,8 @@
             </ion-card>
             </ion-slide>
           </ion-slides>
-
+      <div style="height:20px"></div>
+       <div style="text-align:left">
+       
+       </div>
 </ion-content>
