--- a/src/app/list-shows/list-shows.page.scss
+++ b/src/app/list-shows/list-shows.page.scss
@@ -8,7 +8,7 @@
 
 .trend-card{
     height: 190px;
-    width: 100%;
+    width: 190px;
     background-color: rgb(13, 27, 54);
     border-radius: 20px;
     
