--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -41,10 +41,7 @@
 <ion-content [fullscreen]="true" class="content"  style="background-color: rgb(248, 244, 244)"
 [scrollEvents]="true" (ionScrollStart)="scrollStart(header)"   (ionScroll)="logScrolling($event)" >
   
-    <div style="height:5px"></div>
-      <ion-searchbar #searchbar [(ngModel)]="usage.searchQuery" debounce="1800" (ionChange)="getItems($event)"  placeholder="What are you looking for?"
-       autocomplete="on" style="border-radius:20px" >
-      </ion-searchbar>
+  
       <div style="height:10px"></div>
       <ion-card style="height: 190px;background-color: transparent;margin-top: 0.1px;border-radius:20px;margin-left:10px;margin-right:10px">  
       
@@ -73,6 +70,10 @@
                   </ion-slides> 
   
       </ion-card> 
+        <div style="height:5px"></div>
+      <ion-searchbar #searchbar [(ngModel)]="usage.searchQuery" debounce="1800" (ionChange)="getItems($event)"  placeholder="What are you looking for?"
+       autocomplete="on" style="border-radius:20px" >
+      </ion-searchbar>
      <div style="height:5px"></div>
      <div style="text-align:left;margin-left:10px;margin-right:10px">
          <p> <b>Categories we offer On B2B</b></p>
@@ -131,7 +132,7 @@
             </div>
 
             <ion-slides [options]="slideOpts_stores" style="width: 100%;" >
-              <ion-slide *ngFor="let names of daBuilding" (click)="DealsClicked($event, names)">
+              <ion-slide *ngFor="let names of daBuilding" (click)="orderclicked($event, names)" >
                 <span>
                   <ion-label  color="dark" style="font-size: smaller;">                             
                     <img class="pro_images" src = {{names.avatarimage}}   >  <br>                        
