--- a/src/app/view-cart/view-cart.page.scss
+++ b/src/app/view-cart/view-cart.page.scss
@@ -6,6 +6,13 @@
    // border-radius:20px;
    // z-index: -1;
   }
+  .topslides1{
+    max-height: 100px;
+    flex-direction: column;
+    width: 20%;
+   // border-radius:20px;
+   // z-index: -1;
+  }
   
   .trending{
     height: 190px;
