--- a/src/app/view-cart/view-cart.page.html
+++ b/src/app/view-cart/view-cart.page.html
@@ -118,7 +118,7 @@
             </ion-col>
             <ion-col size="4" style="margin-top: 2px;" >                
             <div style="text-align:center">
-              <ion-button color="success" style="width:100%" shape="round">Send Enquiry</ion-button>
+              <ion-button color="success" style="width:100%" shape="round">Send Quote</ion-button>
             </div>
             </ion-col>
             <ion-col size="4" style="margin-top: 2px;" >                
