--- a/src/app/pop-alert/pop-alert.page.html
+++ b/src/app/pop-alert/pop-alert.page.html
@@ -1,9 +1,57 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>PopAlert</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="ion-padding" >
+<div style="text-align:center">
 
-<ion-content>
+<ion-img  style="width: 70px;height:50px;text-align:center; margin: auto;display: block;"   src="assets/sent-message.jpg"></ion-img>     
 
+
+</div>
+     <div style="height:50px">
+      <div style="text-align:center">
+             <h1 Style="color:blue"><b>Hey </b></h1>
+      </div>
+      <div >
+      <div  style="margin-left: 25px;" >
+          <p style="color:red">Have you gotten the product you wanted</p> 
+          </div>
+          <div style="text-align: center">
+            <ion-button color="success" style="color:black"   shape="round" (click)="close()">
+              Okay        
+              <ion-icon slot="start" name="checkmark-done-outline"></ion-icon>
+            </ion-button>    
+           
+            
+        <ion-grid style="width: 100%;">
+        
+          <ion-row style="padding-left: 20px;" >          
+            <ion-col size="4" style="margin-top: 2px;" >                
+           <div style="text-align: left;margin-bottom: 10px;">
+             <ion-button color="success" style="color:black"   shape="round" (click)="close()">
+              Yes        
+              <ion-icon slot="start" name="checkmark-done-outline"></ion-icon>
+            </ion-button>    
+           
+            </div>
+
+            </ion-col>
+            <ion-col size="4" style="margin-top: 2px;" >                
+             <div style="text-align: left;margin-bottom: 10px;">
+                <ion-button color="success" style="color:black"   shape="round" (click)="close()">
+                  Not yet      
+                  <ion-icon slot="start" name="checkmark-done-outline"></ion-icon>
+                </ion-button>    
+              
+            </div>
+            </ion-col>
+                
+          </ion-row>
+
+        </ion-grid>
+
+
+          </div>
+          </div>
+       </div>
+             
+      
+    
 </ion-content>
