--- a/src/global.scss
+++ b/src/global.scss
@@ -48,3 +48,17 @@
     background-color: #FEFCFE; 
     border-radius: 10px; 
   }
+  
+.my-custom-modal-confirmation .modal-wrapper {
+  height: 250px;
+  top: 20%;
+  width: 90%;
+  position: absolute; 
+  display: block; 
+  //opacity: 0.3 !important;   
+  box-shadow: 0 16px 20px rgba(0,0,0,.4);
+  border-radius: 25px;
+  border: 1px solid rgb(139, 91, 2);
+  padding: 20px;   
+  background-color: yellowgreen;
+}
