--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -72,10 +72,12 @@
       </ion-card> 
         <div style="height:5px"></div>
         
-      <ion-searchbar placeholder="Search..." [(ngModel)]="filterTerm" animated="true" (click)="cantfind()" ></ion-searchbar>
+    <ion-searchbar  (click)="SearchProduct()"></ion-searchbar>
 
 
-
+  <ion-list>
+    <ion-item *ngFor="let item of itemss"> {{ item.title }} </ion-item>
+  </ion-list>
       
    
 
