--- a/src/app/search-product/search-product.page.html
+++ b/src/app/search-product/search-product.page.html
@@ -56,7 +56,7 @@
         </ion-item>
 
         <ion-item  lines="none">
-          <ion-button color="tertiary" size="medium" shape="round" (click)="proceed()">                   
+          <ion-button color="tertiary" size="medium" shape="round" (click)="createorder()">                   
               ORDER ITEM
           </ion-button>
         </ion-item>
