--- a/src/app/create-order/create-order.page.html
+++ b/src/app/create-order/create-order.page.html
@@ -31,21 +31,21 @@
           <ion-card style="border-radius:20px;margin-left:20px;margin-right:20px">
                
                <ion-item>
-                   <ion-input  name="refe"  placeholder="Enter Product Name"></ion-input>
+                   <ion-input  name="refe"  readonly > {{prodname}}</ion-input>
                   <ion-icon class="ion-align-self-center" name="document-lock" slot="start"></ion-icon>
                  </ion-item>
           
 
           <div style="height:25px"></div>
               <ion-item>
-               <ion-input  name="refe"  placeholder="Quantity"></ion-input>
+               <ion-input  name="refe"  placeholder="Quantity" type="number"></ion-input>
                   <ion-icon class="ion-align-self-center" name="document-lock" slot="start"></ion-icon>
            
               </ion-item>
              
           <div style="height:25px"></div>
               <ion-item>
-               <ion-input  name="refe"  placeholder="Description"></ion-input>
+               <ion-input  name="refe"  placeholder="Description" ></ion-input>
                   <ion-icon class="ion-align-self-center" name="document-lock" slot="start"></ion-icon>
            
               </ion-item>
