--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -27,7 +27,7 @@
                 
           <div style="text-align: center;margin-top: 40px;margin-left: 15px;margin-right: 15px;margin-bottom: 10px;">
                  
-               <ion-button shape="round" color="warning" style="height: 45px;" (click)="Quicksolution()">Login
+               <ion-button shape="round" color="warning" style="height: 45px;" (click)="Fetch_account()">Login
                 <ion-icon name="arrow-forward-circle-outline"  slot="end"></ion-icon>                 
                </ion-button>
           </div>
