--- a/src/app/tab-orders/tab-orders.page.html
+++ b/src/app/tab-orders/tab-orders.page.html
@@ -1,9 +1,85 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>TabOrders</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content  >
+      <div style="text-align: center;width: 98%;margin-top: 0.5px;margin-left: 0.5px;margin-right: 5px;padding-right: 5px;">
+        <ion-grid style="width: 100%;">
+          <ion-row  >  
+            <ion-col push-md="1"  align-self: start  style="align-items: left;" >                  
+              <div   style="text-align: left;width: 100%;"   >  
+                       <ion-icon style="width:25px;height: 25px;margin-right: 1px;" name="heart-circle-outline"  (click)="SearchProduct()"></ion-icon>
+                </div>            
+            </ion-col>
 
-<ion-content>
+                             
+             <ion-col push-md="1" align-self: center  style="align-items: left;margin-top: 10px;" >                  
+                <div   style="text-align: right;width: 100%;"   > 
+                
+                      <ion-icon style="width:25px;height: 25px;margin-right: 1px;" name="heart-circle-outline"  (click)="SearchProduct()"></ion-icon>
+                  </div>            
+              </ion-col>           
+              <ion-col size="1"  style="text-align: left;margin-top: 10px;margin-right: 7px;"   > 
+               
+              <ion-icon name="bag-handle-outline"></ion-icon>
+               
+              </ion-col>
+                      
+                      
+      
+          </ion-row>
+
+        </ion-grid>
+      </div>
+
+
+  <ion-card  class="rcorners3" >
+    <ion-slides slidesPerView="1" centeredSlides  pager="true"  class="topslides"   >     
+      
+      <ion-slide *ngFor="let item of daBuilding;"   >  
+        <div class="rcorners3"> 
+          <ion-img style="height: 100%;" width="150%"  src={{item.avatarimage}} ></ion-img>  
+          </div>           
+      </ion-slide> 
+                           
+     </ion-slides>
+   </ion-card>
+
+
+
 
 </ion-content>
+
+
+
+<ion-footer>
+  <ion-toolbar  > 
+
+      
+
+        <ion-grid style="width: 100%;">
+        
+          <ion-row style="padding-left: 10px;" >          
+            <ion-col size="4" style="margin-top: 2px;" >                
+             <div style="text-align:center">
+              <ion-button color="tertiary" style="width:100%" shape="round">Chat Now</ion-button>
+              </div>
+            </ion-col>
+            <ion-col size="4" style="margin-top: 2px;" >                
+            <div style="text-align:center">
+              <ion-button color="success" style="width:100%" shape="round">Send Quote</ion-button>
+            </div>
+            </ion-col>
+            <ion-col size="4" style="margin-top: 2px;" >                
+            <div style="text-align:center">
+              <ion-button color="warning" style="width:100%" shape="round">Start Order </ion-button>
+              </div>
+            </ion-col>        
+          </ion-row>
+
+        </ion-grid>
+
+         
+
+    
+     
+   
+ 
+  </ion-toolbar>
+</ion-footer>
