--- a/src/app/create-order/create-order.page.html
+++ b/src/app/create-order/create-order.page.html
@@ -45,7 +45,7 @@
              
           <div style="height:25px"></div>
               <ion-item>
-               <ion-input  name="refe"  placeholder="Description" [(ngModel)]="usage.proddesc" ></ion-input>
+               <ion-input  name="refe"  placeholder="Description" [(ngModel)]="usage.proddes" ></ion-input>
                   <ion-icon class="ion-align-self-center" name="document-lock" slot="start"></ion-icon>
            
               </ion-item>
@@ -54,7 +54,7 @@
            <div style="height:25px"></div>
               <div style="margin-top: 50px;text-align:center">
                 <ion-button color="warning" shape="round" style="border-bottom-right-radius: 5px;border-top-right-radius: 5px;"
-                      (click)="create_order()"  >    
+                      (click)="gotolistcreation()"  >    
                         Create Order
                       
                     </ion-button>
