--- a/src/app/tab-orders/tab-orders.page.scss
+++ b/src/app/tab-orders/tab-orders.page.scss
@@ -1,9 +1,15 @@
 .rcorners3 {
     border-radius: 25px;
  
-  padding: 20px; 
-  width: 800%;
+  padding-left: 20px; 
+  padding-right: 20px; 
+  width: 96%;
   height: 250px;  
+}
+.rcorners {
+   border-radius: 25px;
+    width: 96%;
+    height: 65%;  
 }
 
 .topslides{
