--- a/src/app/quotation/quotation.page.html
+++ b/src/app/quotation/quotation.page.html
@@ -1,9 +1,149 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Quotation</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content [fullscreen]="true" [scrollEvents]="true"   >
+ <ion-grid   style="margin-top: 5px;"  > 
+                
+      <ion-row  style="background-color:snow"  > 
+          
+             <ion-col align-self: center style="justify-content: right;" size="auto" class="centered"    >
+                 <ion-icon style="width:25px;height: 25px;margin-right: 1px;" name="arrow-back-outline" (click)="SearchProduct()"></ion-icon>                
+                  </ion-col>
 
-<ion-content>
+                 
+                  <ion-col align-self: stretch push-md="1" >
 
+                    <div style="margin-top: 10px;text-align:center">
+                   <p>Item Cart</p> 
+                    </div>                     
+                   
+                  </ion-col>
+        
+                 
+                  <ion-col size="auto"  class="centered" style="align-items: right;"   >
+                    <div style="margin-top: 1px;text-align: right;">
+                   <ion-icon style="width:25px;height: 25px;margin-right: 1px;" name="bag-handle-outline"></ion-icon>
+                                                                                                                                                            
+                    </div>  
+                  </ion-col>
+
+
+      </ion-row> 
+  </ion-grid>
+  
+
+
+  <div class="spacer" style="height: 2px"></div> 
+ 
+
+        <ion-grid *ngFor="let item of daBuilding"  style="margin-bottom: 20px;"   >  
+           <ion-card  class="rcorners"  *ngFor="let item of daBuilding" >
+            <ion-row >
+            
+
+                <ion-col size="3" style="text-align:left" >   
+                    <img style="height: 100px;border-radius: 15px;" src = {{item.avatarimage}}>                                                                                                                                        
+                </ion-col>
+
+                <ion-col >
+                  <ion-row class="align-items-start">
+                    <ion-col  >                     
+                        <ion-label style="font-size: medium;"  > <b>{{item.prodname}}  </b></ion-label>                        
+                    </ion-col>
+
+                    </ion-row>
+                            
+                    <ion-row class="ion-align-self-end">
+                     
+                        <ion-col   class="align-self-end"  > 
+                          <div style="text-align: left;justify-content: start;">
+                            <p style="font-weight: bolder;">{{ item.pricerangeA }}  </p> 
+                          </div>                       
+                                                 
+                        </ion-col>
+                     
+                        
+                        <ion-col class="align-self-end"   >
+                         <ion-item no-lines>
+                            <ion-button (click)="minus()" shape="round"  fill="clear" style="font-size:30px">-</ion-button>
+                            <ion-button shape="round" color="danger" style="width:40%">{{item.proquantity}}                                            
+                                  </ion-button>              
+                            <ion-button (click)="plus()" shape="round"  fill="clear" style="font-size:30px">+</ion-button>
+                            <ion-icon name="trash-outline" style="width:35px;height: 35px;margin-right: 1px;color:red"></ion-icon>
+                          </ion-item>
+                      
+                         </ion-col>
+
+                       
+                         
+                   
+                  </ion-row>
+                  
+                  
+
+                 
+                </ion-col>            
+            </ion-row>
+
+          </ion-card>
+        </ion-grid>
+    
+
+  <ion-card style="border-radius:20px" >
+     <ion-item>                 
+                  <ion-input   [(ngModel)]="usage.qname" placeholder="Quotation message"></ion-input>
+                  <ion-icon class="ion-align-self-center" name="people" slot="start"></ion-icon>
+    </ion-item>
+          
+    <ion-item>                 
+                  <ion-input   readonly>Company Name: GleamGem </ion-input>
+                  <ion-icon class="ion-align-self-center" name="create-outline" slot="end"></ion-icon>
+                 
+                </ion-item>
+         <ion-item>                 
+                  <ion-input   readonly>Name: Muringe Muthoni</ion-input>
+                  <ion-icon class="ion-align-self-center" name="create-outline" slot="end"></ion-icon>
+                 
+                </ion-item>
+                 
+
+                <ion-item>                 
+                  <ion-input   readonly>Name: 0748029020</ion-input>
+                  <ion-icon class="ion-align-self-center" name="create-outline" slot="end"></ion-icon>
+                 
+                </ion-item>
+              
+
+            
+
+ </ion-card>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar  > 
+
+      
+
+        <ion-grid style="width: 100%;">
+        
+          <ion-row style="padding-left: 10px;" >          
+            <ion-col size="6" style="margin-top: 2px;" >                
+             <div style="text-align:center">
+              <ion-button color="tertiary" style="width:100%" shape="round"  (click)="letsviewcheckout()">Check Out</ion-button>
+              </div>
+            </ion-col>
+            <ion-col size="6" style="margin-top: 2px;" >                
+            <div style="text-align:center">
+              <ion-button color="success" style="width:100%" shape="round" (click)="letsviewquotation()">Send Quote</ion-button>
+            </div>
+            </ion-col>
+           
+          </ion-row>
+
+        </ion-grid>
+
+         
+
+    
+     
+   
+ 
+  </ion-toolbar>
+</ion-footer>
