--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,15 +6,23 @@
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-    <ion-icon name="list-circle-outline"></ion-icon>    
-      <ion-label>Schedules</ion-label>
+  <ion-tab-button tab="tab-orders">
+     <ion-icon name="list-circle-outline"></ion-icon>    
+      <ion-label>Orders</ion-label>
+    </ion-tab-button>
+    
+<ion-tab-button tab="tab2">
+     <ion-icon name="person-circle-outline"></ion-icon>
+      <ion-label>Schedule</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+
+<ion-tab-button tab="tab3">
      <ion-icon name="person-circle-outline"></ion-icon>
       <ion-label>Report</ion-label>
     </ion-tab-button>
+
+  
   </ion-tab-bar>
 
 </ion-tabs>
